--- a/recoltes-et-semailles/part-1/11.md
+++ b/recoltes-et-semailles/part-1/11.md
@@ -7,7 +7,7 @@ I don't recall Chevalley ever having made an allusion to the knowledge of self, 
 
 It seems to me like in those early years of the seventies, when we were meeting regularly at the occasion of the publication of the bulletin "Survivre et Vivre", Chevalley was trying, without insistence, to communicate to me a message that I was then too clumsy to grasp, or too locked up in my activist tasks. I realized obscurely that he had something to teach me on liberty &mdash; on inner liberty. While I had the tendency to to function with grand moral principles and had began to sound this trumpet since the first numbers of Survivre, like something self-evident, he had a particular aversion for moralizing discourse. I think this was the thing about him that [déroutait] me the most, at the beginnings of Survivre. To him, such discourse was just an attempted constraint, overlapping with a multitude of other exterior constraints that can suffocate a person. One may surely spend the rest of one's life discussing such a way of seeing things, the pros and the cons. It totally jostled mine, animated (one can suspect) by more noble and generous sentiments. I struggled, it was incomprehensible to me that Chevalley, whom I held in the highest esteem and with whom I find myself somewhat like a comrade in arms, taking a [malin plaisir] not to share these sentiments! I didn't understand that the truth, the reality of things, is not a question neither of good sentiments, nor of points of view or of preferences. Chevalley _saw_ a thing, all simple and real, and I didn't see it. It isn't that he had read it somewhere; [...]. One may read a text at the rigour [...] I don't think that Chevalley had better eyes than me. But he used them, and I didn't. I was too taken by my good intentions and the rest all the rest of it to have the leisure to regard the effect of my good intentions and principles on myself and others, starting with my children.
 
-He must have seen that often I wasn't using my eyes, that I didn't even have the least desire to. It is strange that he never hinted at this to me. Or did he, without me hearing? Or did it abstain, judging that it was a lost cause? Or maybe the idea didn't even come to his mind &mdash; it is my business after all and not his, if I use my eyes or not!
+He must have seen that often I wasn't using my eyes, that I didn't even have the least desire to. It is strange that he never hinted at this to me. Or did he, without me hearing it? Or did he abstain, judging that it was a lost cause? Or maybe the idea didn't even come to his mind &mdash; it is my business after all and not his, if I use my eyes or not!
 
 --------
 
